--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^9.1.2",
     "core-js": "^3.39.0",
     "file-saver": "^2.0.5",
+    "firebase": "^11.10.0",
     "framer-motion": "^11.11.11",
     "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.468.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^2.10.377",
     "pptxgenjs": "^3.12.0",
@@ -39,7 +41,7 @@
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animation-delay": "^2.0.1",
-    "uuid": "^11.0.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
