updated firebase bucket name

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_FIREBASE_API_KEY=AIzaSyA07gFIusB8FQmiYZJalTtEEPwINCzCFcA
 REACT_APP_FIREBASE_AUTH_DOMAIN=uploaddocuments-3a515.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=uploaddocuments-3a515
-REACT_APP_FIREBASE_STORAGE_BUCKET=uploaddocuments-3a515.appspot.com
+REACT_APP_FIREBASE_STORAGE_BUCKET=uploaddocuments-3a515.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=457293873292
 REACT_APP_FIREBASE_APP_ID=1:457293873292:web:aedf76600a37afc0b4fba9
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-Q0V5J7MYDB
