--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+utils/Firebase/admin_service_account_firebase.json
 
 npm-debug.log*
 yarn-debug.log*
