--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=457293873292
 REACT_APP_FIREBASE_APP_ID=1:457293873292:web:aedf76600a37afc0b4fba9
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-Q0V5J7MYDB
 REACT_APP_CLIENT_ID =870752404932-4p3qpfasj7lh653lurieq6oati42slgj.apps.googleusercontent.com
+REACT_APP_FIREBASE_MESSAGING_KEY = BKxBKAdw5EATEiIAP3eYJbfvJSJuKQyukOUPCwe28JnW86pH_FjcCeX852kvvStaRnJsLuReQtbrleHdVB3opVY	
